--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -4,6 +4,7 @@
   line-height: 36px;
   font-weight: lighter;
   color: @bg-darkblue;
+  text-align: center;
 }
 
 .contacts__list {
@@ -11,6 +12,7 @@
 }
 
 .contacts__item {
+  padding: 0 20px;
   text-align: center;
 }
 
@@ -21,6 +23,7 @@
 }
 
 .contacts__info {
+  margin: 0;
   font-size: 18px;
   line-height: 27px;
   font-weight: lighter;
