--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,9 +1,9 @@
-.socials__list {
-  .reset-list;
+.page-footer__logo {
+  width: 146px;
+  height: 40px;
+  padding: 40px 90px;
 }
 
-.copyright__link {
-  text-decoration: none;
-  line-height: 18px;
-  color: @bg-darkblue;
+.page-footer__socials {
+  padding: 0 55px;
 }
