--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,25 +1,10 @@
-.form-group {
-  border: none;
+.page-form__text {
+  margin: 0;
+  padding: 0 20px;
+  text-align: center;
 }
 
-.field-text__label {
-  line-height: 30px;
-  color: #d22856;
-}
-
-.form-group__title {
-  line-height: 18px;
-  color: #d22856;
-}
-
-.field-checkbox__label {
-  font-size: 18px;
-  line-height: 30px;
-  color: @bg-darkblue;
-}
-
-.field-radio__label {
-  font-size: 18px;
-  line-height: 30px;
-  color: @bg-darkblue;
+.field-action {
+  background-color: #2aab6d;
+  border-radius: 5px;
 }
