--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -1,7 +1,25 @@
+.post {
+  background-color: @bg-grey;
+}
+
+.post__img {
+  display: block;
+  padding: 20px;
+}
+
 .post__title {
   margin: 0;
+  // padding: 50px 20px;
   font-size: 14px;
   line-height: 30px;
   font-weight: normal;
-  color: @bg-darkblue;
+  background-color: #ffffff;
+  text-align: center;
+}
+
+.post__btn {
+  width: 280px;
+  margin: 0 20px;
+  border-color: #d22856;
+  color: #d22856;
 }
