--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,13 +1,11 @@
 .download {
   background-color: @bg-darkblue;
+  padding: 0 20px;
 }
 
 .download__btn {
   text-decoration: none;
-  color: @font-color-white;
-  font-size: 18px;
-  line-height: 18px;
-  font-weight: bold;
+  background-color: @bg-darkblue;
 }
 
 .download__list {
@@ -15,6 +13,7 @@
 }
 
 .download__text {
+  margin: 0;
   color: @font-color-white;
   font-weight: lighter;
   text-align: center;
