--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,4 +1,5 @@
 .features__slogan {
+  margin: 0;
   color: @bg-darkblue;
   font-size: 24px;
   line-height: 36px;
@@ -9,17 +10,23 @@
 .features__list {
   .reset-list;
   min-height: 750px;
-  background: url(../img/iphone-screen-mobile@1x.png) no-repeat center bottom;
+  background: url("../img/iphone-screen-mobile@1x.png") no-repeat center bottom;
   background-color: @bg-grey;
 }
 
+.features__item {
+  padding: 0 20px;
+}
+
 .features__title {
+  margin: 0;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
 }
 
 .features__description {
+  margin: 0;
   font-weight: lighter;
   text-align: center;
 }
