--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -2,12 +2,21 @@
   .reset-list;
 }
 
+.reveiws__item {
+  padding: 0 20px;
+  text-align: center;
+}
+
 .reviews__author {
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
 }
 
-.reviws__item {
-  text-align: center;
+.reviews__text {
+  margin: 0;
+}
+
+.reviews__toggles {
+  margin: 0;
 }
