--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,9 @@
 @import "variables.less";
 @import "mixins.less";
 @import "basics.less";
+@import "blocks/btn.less";
 @import "blocks/page-header.less";
+@import "blocks/main-nav.less";
 @import "blocks/page-main.less";
 @import "blocks/download.less";
 @import "blocks/features.less";
@@ -10,6 +12,13 @@
 @import "blocks/price.less";
 @import "blocks/contacts.less";
 @import "blocks/gallery.less";
+@import "blocks/photo.less";
 @import "blocks/post.less";
+@import "blocks/socials.less";
+@import "blocks/copyright.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-form.less";
+@import "blocks/form-group.less";
+@import "blocks/field-text.less";
+@import "blocks/field-checkbox.less";
+@import "blocks/field-radio.less";
