--- a/source/less/blocks/form-group.less
+++ b/source/less/blocks/form-group.less
@@ -1,9 +1,11 @@
 .form-group {
+  margin: 0;
   padding: 0 20px;
   border: none;
 }
 
 .form-group__title {
+  padding: 0;
   line-height: 18px;
   color: #d22856;
 }
