--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,11 +1,55 @@
+.main-nav {
+  position: relative;
+  width: 320px;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 24px;
+  background-color: transparent;
+  background-image: url("../img/icon-menu-burger.svg");
+}
+
+.main-nav--opened .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+  background-image: url("../img/icon-menu-cross.svg");
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
 .main-nav__list {
+  display: none;
+  background-color: @bg-darkblue;
   .reset-list;
 }
 
 .main-nav__link {
+  display: block;
+  padding: 20px 0;
+  border-bottom: 2px solid #000000;
+  border-top: 2px solid #485461;
   text-decoration: none;
+  text-align: center;
   color: @font-color-white;
   font-size: 18px;
   line-height: 32px;
   font-weight: bold;
+  cursor: pointer;
 }
