--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,7 +1,3 @@
-.photo:not:first-child {
-  padding: 0 20px;
-}
-
 .photo__img {
   display: block;
   margin: 0 auto;
@@ -20,6 +16,10 @@
 .photo__time {
   font-weight: lighter;
   text-transform: uppercase;
+}
+
+.photo__like {
+  margin: 0;
 }
 
 .photo__text {
