--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -9,7 +9,7 @@
 
 .post__title {
   margin: 0;
-  // padding: 50px 20px;
+  padding: 50px 20px;
   font-size: 14px;
   line-height: 30px;
   font-weight: normal;
