--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -23,3 +23,22 @@
   border-color: #d22856;
   color: #d22856;
 }
+
+@media (min-width: @tablet-width) {
+  .post {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .post__title {
+    width: 620px;
+  }
+
+  .post__img {
+    width: 300px;
+  }
+
+  .post__toggle {
+    width: 300px;
+  }
+}
