--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,3 +22,5 @@
 @import "blocks/field-text.less";
 @import "blocks/field-checkbox.less";
 @import "blocks/field-radio.less";
+@import "blocks/field-textarea.less";
+@import "blocks/field-action.less";
