--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,11 @@
+.contacts {
+  padding-top: 45px;
+}
+
 .contacts__title {
-  margin: 0;
+  width: 300px;
+  margin: 0 auto;
+  padding-bottom: 40px;
   font-size: 24px;
   line-height: 36px;
   font-weight: lighter;
@@ -8,11 +14,27 @@
 }
 
 .contacts__list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 320px;
   .reset-list;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__list {
+    width: 600px;
+    justify-content: space-between;
+  }
+
+  .contacts__item:nth-child(3) {
+    margin: 0 auto;
+  }
 }
 
 .contacts__item {
   padding: 0 20px;
+  padding-bottom: 20px;
   text-align: center;
 }
 
