--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,6 +1,14 @@
 .download {
-  background-color: @bg-darkblue;
+  margin: 0 auto;
   padding: 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .download {
+    position: absolute;
+    top: 380px;
+    left: 0;
+  }
 }
 
 .download__btn {
@@ -15,7 +23,6 @@
   justify-content: space-around;
   align-items: flex-end;
   .reset-list;
-  margin: 0 auto;
 }
 
 .download__link {
