--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,5 +1,10 @@
+.features {
+  margin-top: 45px;
+}
+
 .features__slogan {
   margin: 0;
+  padding-bottom: 40px;
   color: @bg-darkblue;
   font-size: 24px;
   line-height: 36px;
@@ -7,19 +12,78 @@
   text-align: center;
 }
 
+@media (min-width: @tablet-width) {
+  .features__slogan {
+    padding-bottom: 0;
+  }
+
+  .features__slogan:nth-child(2) {
+    padding-right: 300px;
+    padding-left: 300px;
+    padding-bottom: 40px;
+  }
+}
+
 .features__list {
   .reset-list;
+  padding-top: 55px;
   min-height: 750px;
-  background: url("../img/iphone-screen-mobile@1x.png") no-repeat center bottom;
+  background: url("../img/iphone-screen-mobile@1x.png") no-repeat center 110%;
   background-color: @bg-grey;
 }
 
 .features__item {
   padding: 0 20px;
+  padding-bottom: 40px;
+}
+
+@media (min-width: @tablet-width) {
+  .features__list {
+    min-height: 480px;
+    background: @bg-grey url("../img/iphone-screen-mobile@1x.png") no-repeat 20px 110%;
+    background-size: 266px 486px;
+  }
+
+  .features__item {
+    width: 320px;
+    margin-left: 450px;
+    padding: 0 20px;
+    padding-bottom: 40px;
+  }
+
+  .features__title,
+  .features__description {
+    text-align: left;
+  }
+}
+
+.features__addition {
+  display: none;
+  width: 320px;
+  min-height: 400px;
+  padding: 100px 0;
+  padding-left: 450px;
+  background-color: #ffffff;
+  text-align: left;
+}
+
+.features__link {
+  color: #d22856;
+}
+
+@media (min-width: @tablet-width) {
+  .features__addition {
+    display: block;
+  }
+
+  .features__description {
+    padding-bottom: 25px;
+  }
 }
 
 .features__title {
   margin: 0;
+  padding-bottom: 20px;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
