--- a/source/less/blocks/form-group.less
+++ b/source/less/blocks/form-group.less
@@ -1,11 +1,32 @@
 .form-group {
+  display: flex;
   margin: 0;
   padding: 0 20px;
   border: none;
 }
 
+.form-group:nth-child(5) {
+  background-color: @bg-grey;
+}
+
 .form-group__title {
-  padding: 0;
+  margin: 0 auto;
+  padding: 40px 0;
   line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
   color: #d22856;
+}
+
+@media (min-width: @tablet-width) {
+  .form-group {
+    margin: 0 20px;
+    margin-bottom: 50px;
+    padding: 20px;
+    border: 2px solid @bg-grey;
+  }
+
+  .form-group:nth-child(2) {
+    border: none;
+  }
 }
