--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,10 +1,5 @@
 .page-form__text {
   margin: 0;
-  padding: 0 20px;
+  padding: 50px 20px;
   text-align: center;
-}
-
-.field-action {
-  background-color: #2aab6d;
-  border-radius: 5px;
 }
