--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -5,6 +5,8 @@
 
 .photo__wrapper {
   margin: 0 20px;
+  padding: 20px 15px;
+  text-align: left;
   background-color: @bg-grey;
 }
 
@@ -31,4 +33,15 @@
   margin: 0;
   font-size: 12px;
   color: #d22856;
+}
+
+@media (min-width: @tablet-width) {
+  .photo {
+    width: 300px;
+    margin: 0 auto;
+  }
+
+  .photo:nth-child(2) {
+    width: 620px;
+  }
 }
