--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,3 +1,7 @@
+.reviews {
+  padding: 50px 0;
+}
+
 .reviews__list {
   .reset-list;
 }
@@ -13,8 +17,21 @@
   font-weight: bold;
 }
 
+.reviews__author-addition {
+  display: none;
+  font-size: 14px;
+  font-weight: lighter;
+}
+
+@media (min-width: @tablet-width) {
+  .reviews__author-addition {
+    display: block;
+  }
+}
+
 .reviews__text {
   margin: 0;
+  padding: 30px 0;
 }
 
 .reviews__toggles {
