--- a/source/less/basics.less
+++ b/source/less/basics.less
@@ -23,7 +23,20 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 .page-wrapper {
-  min-width: 320px;
+  width: 320px;
   margin: 0 auto;
+
+  @media(min-width: @tablet-width) {
+    width: @tablet-width;
+  }
+
+  @media(min-width: @desktop-width) {
+    width: @desktop-width;
+  }
 }
