--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,5 @@
 .page-header {
+  position: relative;
   background-color: @bg-darkblue;
 }
 
@@ -11,32 +12,79 @@
   background-repeat: no-repeat;
   background-position: 0 bottom, 0 0;
   background-size: 258px 286px, cover;
+
+  @media (min-width: @tablet-width) {
+    min-height: 735px;
+    background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 95% bottom, center;
+    background-size: 450px 550px, cover;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 853px;
+    padding: 20px 10px;
+    background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 80% bottom, center;
+    background-size: 450px 550px;
+  }
 }
 
-.page-header__logo {
+.page-header__wrapper--inner {
+  display: flex;
+  justify-content: space-between;
+  min-height: 240px;
+  padding: 20px 20px;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+
+  @media(min-width: @tablet-width) {
+    min-height: 440px;
+  }
+
+  @media(min-width: @desktop-width) {
+    min-height: 390px;
+  }
+}
+
+.page-header__logo-img {
   width: 74px;
   height: 23px;
+
+  @media(min-width: @tablet-width) {
+    padding-left: 70px;
+    padding-top: 20px;
+  }
+}
+
+.page-header__logo-img--inner {
+  @media(min-width: @tablet-width) {
+    background-image: url("../img/logo-pink-blue-mobile.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
 }
 
 .page-header__title {
-  margin: 0;
+  position: absolute;
+  height: 100px;
+  margin: auto;
+  padding: 75px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   font-size: 24px;
   line-height: 36px;
   font-weight: lighter;
   color: @font-color-white;
   text-align: center;
-}
 
-@media (min-width: @tablet-width) {
-  .page-header {
-    position: relative;
-  }
-
-  .page-header__wrapper {
-    min-height: 735px;
-    background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: 170px bottom, center;
-    background-size: 258px 286px, cover;
+  @media(min-width: @tablet-width) {
+    font-size: 50px;
+    line-height: 70px;
   }
 }
