--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,3 +1,24 @@
+.socials {
+  width: 190px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 35px;
+}
+
 .socials__list {
+  display: flex;
   .reset-list;
+}
+
+.socials__item {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border: 3px solid @bg-grey;
+  border-radius: 50%;
+}
+
+.socials__item:last-child {
+  margin-right: 0;
 }
