--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "fonts/fonts.less";
 @import "variables.less";
 @import "mixins.less";
+@import "normalize.less";
 @import "basics.less";
 @import "blocks/btn.less";
 @import "blocks/page-header.less";
@@ -11,6 +12,7 @@
 @import "blocks/reviews.less";
 @import "blocks/price.less";
 @import "blocks/contacts.less";
+@import "blocks/map.less";
 @import "blocks/gallery.less";
 @import "blocks/photo.less";
 @import "blocks/post.less";
