--- a/source/less/blocks/field-action.less
+++ b/source/less/blocks/field-action.less
@@ -1,7 +1,12 @@
 .field-action {
+  display: block;
   padding-left: 50px;
   padding-right: 50px;
-  margin: 40px 20px;
+  margin: 0 auto;
   background-color: #2aab6d;
   border-radius: 5px;
+
+  @media (min-width: @tablet-width) {
+    width: 300px;
+  }
 }
