--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,23 +1,23 @@
-.gallery {
-  @media (min-width: @tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
-  @media (min-width: @tablet-width) {
-    justify-content: center;
-  }
-}
-
 .gallery__text {
-  margin: 0;
-  padding: 50px 20px;
+  width: 200px;
+  margin: 0 auto;
+  padding: 53px 0;
+  font-size: 14px;
   line-height: 30px;
-  color: @bg-darkblue;
+  font-weight: normal;
   text-align: center;
+  color: @bg-darkblue;
 
   @media (min-width: @tablet-width) {
-    padding: 50px 100px;
+    width: 400px;
+    padding-top: 97px;
+    padding-bottom: 77px;
+    font-size: 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 560px;
+    padding-top: 90px;
+    padding-bottom: 87px;
   }
 }
