--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,17 @@
-.contacts {
-  padding-top: 45px;
+.contacts__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  padding: 50px 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    padding: 57px 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    padding: 80px 10px;
+  }
 }
 
 .contacts__title {
@@ -12,14 +24,13 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    width: 375px;
-    margin: 0 auto;
+    padding-bottom: 50px;
     font-size: 40px;
     line-height: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 500px;
+    padding-bottom: 70px;
     font-size: 50px;
     line-height: 80px;
   }
@@ -37,10 +48,8 @@
 }
 
 .contacts__item {
-  width: 295px;
-  margin-right: 20px;
   padding: 0 20px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
   text-align: center;
 }
 
