--- a/source/less/blocks/field-radio.less
+++ b/source/less/blocks/field-radio.less
@@ -1,5 +1,24 @@
 .field-radio {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  margin: 0 auto;
   margin-bottom: 35px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    margin-bottom: 35px;
+    padding-left: 120px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 400px;
+    padding-left: 70px;
+  }
+}
+
+.field-radio:last-child {
+  margin-bottom: 0;
 }
 
 .field-radio__label {
