--- a/source/less/blocks/field-textarea.less
+++ b/source/less/blocks/field-textarea.less
@@ -1,6 +1,14 @@
 .field-textarea {
+  display: block;
   width: 280px;
-  height: 200px;
+  margin: 0 auto;
+  padding: 20px 20px;
+  border: 2px solid @bg-grey;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  color: @bg-darkblue;
 
   @media (min-width: @tablet-width) {
     width: 500px;
