--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,15 +1,13 @@
 .map__frame {
   border: none;
-  width: 320px;
+  width: 100%;
   height: 200px;
 
   @media (min-width: @tablet-width) {
-    width: 660px;
-    height: 380px;
+    height: 375px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1200px;
-    height: 500px;
+    height: 506px;
   }
 }
