--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,21 +1,26 @@
-.page-footer {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+.page-footer__wrapper {
+  width: 320px;
+  margin: 0 auto;
   padding: 40px 0;
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    width: 620px;
+    padding: 30px 20px;
     display: flex;
     justify-content: space-between;
-    padding: 40px 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    padding: 70px 10px;
   }
 }
 
 .page-footer--index {
   display: none;
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     display: flex;
   }
 }
@@ -24,12 +29,39 @@
   width: 146px;
   height: 40px;
   margin-bottom: 35px;
+
+  @media (min-width: @tablet-width) {
+    align-self: center;
+    width: 150px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    // width: 300px;
+  }
 }
 
 .page-footer__socials {
-  width: 190px;
+  margin-bottom: 35px;
+
+  @media (min-width: @tablet-width) {
+    width: 200px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    // width: 300px;
+    text-align: center;
+  }
 }
 
 .page-footer__copyright {
-  width: 190px;
+  @media (min-width: @tablet-width) {
+    align-self: center;
+    width: 150px;
+  }
+
+  @media (min-width: @desktop-width) {
+    // width: 300px;
+  }
 }
