--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,82 +1,75 @@
 .page-header {
   position: relative;
-  background-color: @bg-darkblue;
-}
-
-.page-header__wrapper {
-  display: flex;
-  justify-content: space-between;
-  min-height: 464px;
-  padding: 20px 20px;
+  height: 65px;
+  padding-bottom: 396px;
+  // background-color: rgba(40, 54, 69, 0.5);
   background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 0 bottom, 0 0;
+  background-position: 0 bottom, center;
   background-size: 258px 286px, cover;
 
   @media (min-width: @tablet-width) {
-    min-height: 735px;
+    height: 110px;
+    padding-bottom: 615px;
     background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
     background-repeat: no-repeat;
-    background-position: 95% bottom, center;
+    background-position: 170px bottom, center;
     background-size: 450px 550px, cover;
   }
 
   @media (min-width: @desktop-width) {
-    min-height: 853px;
-    padding: 20px 10px;
+    padding-bottom: 743px;
     background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
     background-repeat: no-repeat;
-    background-position: 80% bottom, center;
-    background-size: 450px 550px;
+    background-position: 0 bottom, center;
+    background-size: 450px 550px, cover;
   }
 }
 
-.page-header__wrapper--inner {
-  display: flex;
-  justify-content: space-between;
-  min-height: 240px;
-  padding: 20px 20px;
+.page-header--inner {
+  height: 65px;
+  padding-bottom: 172px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: 0 -35px;
   background-size: cover;
 
   @media (min-width: @tablet-width) {
-    min-height: 440px;
+    height: 110px;
+    padding-bottom: 333px;
   }
 
   @media (min-width: @desktop-width) {
-    min-height: 390px;
+    padding-bottom: 284px;
+  }
+}
+
+.page-header__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    padding: 0 20px;
   }
 }
 
 .page-header__logo-img {
+  display: block;
   width: 74px;
   height: 23px;
-
-  @media (min-width: @tablet-width) {
-    padding-left: 70px;
-    padding-top: 20px;
-  }
-}
-
-.page-header__logo-img--inner {
-  @media (min-width: @tablet-width) {
-    background-image: url("../img/logo-pink-blue-mobile.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-  }
 }
 
 .page-header__title {
-  position: absolute;
-  height: 100px;
-  margin: auto;
-  padding: 75px;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  width: 190px;
+  margin: 0 auto;
+  padding-top: 35px;
   font-size: 24px;
   line-height: 36px;
   font-weight: lighter;
@@ -84,7 +77,14 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    width: 360px;
+    padding-top: 82px;
     font-size: 50px;
     line-height: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 385px;
+    padding-top: 73px;
   }
 }
