--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -2,30 +2,9 @@
   margin-bottom: 20px;
 }
 
-.photo:not(:nth-child(2)) {
+.photo__container .photo {
   @media (min-width: @tablet-width) {
     width: 300px;
-    margin-right: 20px;
-  }
-}
-
-.photo:nth-child(2) {
-  @media (min-width: @tablet-width) {
-    flex-basis: 100%;
-    margin-bottom: 50px;
-  }
-}
-
-.photo:nth-child(2) .photo__wrapper {
-  @media (min-width: @tablet-width) {
-    width: 620px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 905px;
-    height: 100px;
-    margin: 0 auto;
   }
 }
 
@@ -34,16 +13,60 @@
   margin: 0 auto;
 }
 
+.photo__container .photo__img {
+  @media (min-width: @tablet-width) {
+    height: 300px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 400px;
+  }
+}
+
 .photo__wrapper {
-  margin: 0 20px;
   padding: 20px 15px;
   background-color: @bg-grey;
+}
 
+.photo--wide .photo__wrapper {
+  width: 250px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 590px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 910px;
+  }
+}
+
+.photo__container .photo__wrapper {
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
     height: 150px;
-    margin: 0;
+  }
+}
+
+.photo__container {
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 620px;
+    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    padding: 0 10px;
   }
 }
 
@@ -61,9 +84,13 @@
   margin: 0;
 
   @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: space-between;
     margin-top: auto;
+  }
+}
+
+.photo--wide .photo__like {
+  @media (min-width: @tablet-width) {
+    margin-left: auto;
   }
 }
 
@@ -72,12 +99,15 @@
   line-height: 30px;
 }
 
+.photo--wide .photo__text {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    order: 3;
+  }
+}
+
 .photo__like-text {
   margin: 0;
   font-size: 12px;
   color: #d22856;
-
-  @media (min-width: @tablet-width) {
-    order: -1;
-  }
 }
