--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -2,49 +2,61 @@
   background-color: @bg-grey;
 }
 
+.post__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 620px;
+    height: 510px;
+    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    padding: 0 10px;
+  }
+}
+
 .post__img {
   display: block;
-  width: 280px;
-  padding: 20px;
-  padding-bottom: 0;
+  padding: 20px 0;
 
   @media (min-width: @tablet-width) {
     width: 300px;
-    padding: 0 20px;
+    padding: 60px 0;
   }
 }
 
 .post__title {
   margin: 0;
-  padding: 50px 10px;
+  padding: 50px 0;
   font-size: 14px;
   line-height: 30px;
   font-weight: normal;
   background-color: #ffffff;
   text-align: center;
   color: @bg-darkblue;
-}
 
-.post__wrapper {
   @media (min-width: @tablet-width) {
-    height: 410px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 50px 0;
+    font-size: 18px;
   }
 }
 
 .post__edit {
   display: flex;
   justify-content: space-around;
-  padding: 40px 20px;
-  text-align: center;
+  padding: 40px 0;
 
   @media (min-width: @tablet-width) {
     flex-direction: column;
+    align-self: flex-end;
     width: 300px;
-    padding: 30px 0;
+    padding: 60px 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -63,28 +75,39 @@
 }
 
 .post__toggle {
-  width: 280px;
-  padding: 40px 20px;
+  padding: 40px 0;
 
   @media (min-width: @tablet-width) {
-    width: 300px;
-    padding: 30px 0;
+    align-self: flex-end;
+    width: 270px;
+    padding-top: 66px;
+    padding-bottom: 50px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 400px;
+    display: flex;
+    width: 410px;
+    padding-top: 130px;
   }
 }
 
 .post__btn {
-  width: 280px;
+  width: 100%;
   margin-bottom: 10px;
   background-color: transparent;
   border-color: #d22856;
   color: #d22856;
+
+  @media (min-width: @desktop-width) {
+    margin-right: 40px;
+  }
 }
 
 .post__btn--cancel {
   border-color: #dddfe0;
   color: #dddfe0;
+
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
+  }
 }
