--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,13 +1,17 @@
 .reviews {
-  padding: 50px 0;
+  width: 280px;
+  margin: 0 auto;
+  padding: 50px 20px;
 
   @media (min-width: @tablet-width) {
-    width: 600px;
+    width: 620px;
+    padding: 45px 20px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 700px;
-    margin: 0 auto;
+    width: 940px;
+    padding: 180px 10px;
+    padding-bottom: 130px;
   }
 }
 
