--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,20 +1,15 @@
-.socials {
-  width: 190px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 35px;
-}
-
 .socials__list {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   .reset-list;
 }
 
 .socials__item {
-  width: 50px;
-  height: 50px;
+  width: 46px;
+  height: 46px;
   margin-right: 10px;
+  margin-bottom: 5px;
   border: 3px solid @bg-grey;
   border-radius: 50%;
 }
