--- a/source/less/blocks/btn.less
+++ b/source/less/blocks/btn.less
@@ -10,4 +10,14 @@
   border-radius: 30px;
   outline: none;
   cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: @font-color-white;
+    color: #d22856;
+  }
+
+  &:active {
+    color: rgba(210, 40, 86, 0.3);
+  }
 }
