--- a/source/less/basics.less
+++ b/source/less/basics.less
@@ -1,11 +1,16 @@
 body {
   margin: 0;
+  margin-top: 275px;
   padding: 0;
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 24px;
   font-weight: normal;
   color: #000000;
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+  }
 }
 
 .visually-hidden:not(:focus):not(:active),
