--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -28,6 +28,13 @@
 
   @media (min-width: @tablet-width) {
     padding-bottom: 0;
+    font-size: 40px;
+    line-height: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 50px;
+    line-height: 72px;
   }
 }
 
