--- a/source/less/blocks/field-checkbox.less
+++ b/source/less/blocks/field-checkbox.less
@@ -1,15 +1,3 @@
-.form-group--bg-grey {
-  background-color: @bg-grey;
-
-  @media (min-width: @tablet-width) {
-    background-color: #ffffff;
-  }
-}
-
-.form-group--bg-grey .form-group__title {
-  width: 220px;
-}
-
 .field-checkbox {
   display: flex;
   flex-direction: column;
@@ -20,11 +8,10 @@
   @media (min-width: @tablet-width) {
     margin: 0;
     margin-bottom: 35px;
-    padding-left: 120px;
+    padding-left: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    display: inline-flex;
     padding-left: 40px;
   }
 }
@@ -34,8 +21,21 @@
 }
 
 .field-checkbox__label {
-  padding-left: 70px;
+  position: relative;
+  padding-left: 60px;
   font-size: 18px;
   line-height: 30px;
   color: @bg-darkblue;
+}
+
+.field-checkbox__label::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  display: block;
+  width: 38px;
+  height: 38px;
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
 }
