--- a/source/less/blocks/field-radio.less
+++ b/source/less/blocks/field-radio.less
@@ -8,11 +8,10 @@
   @media (min-width: @tablet-width) {
     margin: 0;
     margin-bottom: 35px;
-    padding-left: 120px;
+    padding-left: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 400px;
     padding-left: 70px;
   }
 }
@@ -22,8 +21,22 @@
 }
 
 .field-radio__label {
-  padding-left: 80px;
+  position: relative;
+  padding-left: 60px;
   font-size: 18px;
   line-height: 30px;
   color: @bg-darkblue;
+}
+
+.field-radio__label::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  display: block;
+  width: 38px;
+  height: 38px;
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
 }
