--- a/source/less/blocks/field-text.less
+++ b/source/less/blocks/field-text.less
@@ -22,17 +22,19 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 940px;
+    flex-basis: 50%;
   }
 }
 
 .field-text__label {
   margin-bottom: 10px;
   line-height: 30px;
+  text-transform: uppercase;
   color: #d22856;
 
   @media (min-width: @tablet-width) {
     padding: 15px 10px;
+    margin-bottom: 0;
   }
 }
 
@@ -60,6 +62,7 @@
 
   @media (min-width: @desktop-width) {
     flex-grow: 0;
+    margin-bottom: 45px;
   }
 }
 
@@ -68,5 +71,9 @@
     align-self: center;
     width: 500px;
     margin-bottom: 0;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 375px;
   }
 }
