--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,7 +2,6 @@
   position: relative;
   height: 65px;
   padding-bottom: 396px;
-  // background-color: rgba(40, 54, 69, 0.5);
   background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 0 bottom, center;
@@ -21,8 +20,8 @@
     padding-bottom: 743px;
     background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
     background-repeat: no-repeat;
-    background-position: 0 bottom, center;
-    background-size: 450px 550px, cover;
+    background-position: 80% bottom, center;
+    background-size: 550px 630px, cover;
   }
 }
 
@@ -31,7 +30,7 @@
   padding-bottom: 172px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 0 -35px;
+  background-position: center;
   background-size: cover;
 
   @media (min-width: @tablet-width) {
@@ -45,18 +44,21 @@
 }
 
 .page-header__wrapper {
-  width: 280px;
-  margin: 0 auto;
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 65px;
   padding: 0 20px;
+  background-color: rgba(0, 0, 0, 0.3);
 
   @media (min-width: @tablet-width) {
-    width: 620px;
-    padding: 0 20px;
+    height: 110px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 940px;
-    padding: 0 20px;
+    justify-content: space-between;
+    height: 110px;
   }
 }
 
@@ -64,27 +66,4 @@
   display: block;
   width: 74px;
   height: 23px;
-}
-
-.page-header__title {
-  width: 190px;
-  margin: 0 auto;
-  padding-top: 35px;
-  font-size: 24px;
-  line-height: 36px;
-  font-weight: lighter;
-  color: @font-color-white;
-  text-align: center;
-
-  @media (min-width: @tablet-width) {
-    width: 360px;
-    padding-top: 82px;
-    font-size: 50px;
-    line-height: 70px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 385px;
-    padding-top: 73px;
-  }
 }
