--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -34,7 +34,7 @@
 
 .post__title {
   margin: 0;
-  padding: 50px 0;
+  padding: 50px 35px;
   font-size: 14px;
   line-height: 30px;
   font-weight: normal;
