--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,7 @@
 @import "blocks/btn.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-main.less";
 @import "blocks/download.less";
 @import "blocks/features.less";
 @import "blocks/reviews.less";
